Fixed layout bug. Analytics ID change

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -150,7 +150,7 @@ header ul li + li {
 
 header ul li + li + li {
   border-right:none;
-  width:89px;
+  width:88px;
 }
 
 header ul a strong {
